# crsync

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: .gitignore  AndroidManifest.xml
android/res/layout/: activity_crsync.xml
android/res/values/: strings.xml
android/src/com/shaddock/crsync/: Crsync.java  CrsyncActivity.java  CrsyncConstants.java  CrsyncInfo.java  CrsyncJava.java  CrsyncProvider.java  CrsyncService.java  OnepieceObserver.java
blake2/: Android.mk  android-build.cmd  android-test.c  android-test.cmd  android-test.mk  blake2-impl.h  blake2.h  blake2sp-ref.c
digest/: Android.mk  android-test.c  android-test.cmd  blake2.h  blake2b-ref.c  digest-build.cmd  digest-test-build.cmd  digest-test-run.cmd  digest-test.c  digest-test.mk  digest.mk  digest.pro  md5.c  md5.h  test-run.cmd
doc/: README.md  benchmark.md  crsync-基于rsync rolling算法的文件增量更新.md  onepiece-基于海贼王记录指针的版本升级方案.md  workflow.md
extra/: CMakeLists.txt  blake2-impl.h  dictionary.c  dictionary.h  md5.c  md5.h  tpl.c  tpl.h  uthash.h
extra/win/: libgen.c
libcurl/include/curl/: curlbuild.h
libs/: CMakeLists.txt
src/: Android.mk  CMakeLists.txt  android-build.bat  android-build.cmd  blake2b-ref.c  com_shaddock_libcurl_Curl.c  com_shaddock_libcurl_Curl.h  crsync-build.cmd  crsync-console.c  crsync-jni.c  crsync.c  crsync.h  crsync.mk  crsync.pro  crsync.rc  crsyncjni.c  crsynctool.c  crsynctool.h  crsyncver.h  define.h  diff.c  diff.h  digest.c  digest.h  global.h  helper.c  helper.h  http.c  http.h  log.c  log.h  magnet.c  magnet.h  main.c  md5.c  object_script.crsync.Debug  object_script.crsync.Release  onepiece-jni.c  onepiece-main.c  onepiece.c  (+10 more)
src/win/: mman.c  mman.h  mmap.c
